logo on mobile view fix

--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -285,6 +285,7 @@ header{
                 max-width: none;
                 left:4%;
                 top:28%;
+                height: 35%;
             }
             .mobile-menu-btn{
                 right:1%;
